<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalulatorApplication</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_text_view">Bill</string>
    <string name="bill_edit_text">0.00</string>
    <string name="tipp">Tipp</string>
    <string name="tipEditText">0</string>
    <string name="change_tip">Change Tip</string>
    <string name="totalBill">Total bill</string>
    <string name="edit_total">0.00</string>
    <string name="boxFriendly">Friendly</string>
    <string name="boxSpecial">Special</string>
    <string name="boxOpinion">Opinion</string>
    <string name="introduction">Introduction</string>
    <string name="Availibility">Availibility</string>
    <string name="radioBad">Bad</string>
    <string name="ok">Ok</string>
    <string name="good">Good</string>
    <string name="timeWait">Time waiting for service</string>
    <string name="buttonStart">Start</string>
    <string name="timePause">Pause</string>
    <string name="timeReset">Reset</string>
    <array name="spinnerArray">
        <item name= "bad">Bad</item>
        <item name= "good">Good</item>
        <item name= "ok">Ok</item>
    </array>


</resources>
