<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    >


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bill"
        android:text="@string/bill_text_view" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/billEditText"
        android:text="@string/bill_edit_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipp"
        android:id="@+id/tipp"
         />

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/tipEditText"
        android:text="@string/tipEditText"
        />
</LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_tip"
        android:id="@+id/labelBill"
        android:textSize="15dp"
        android:paddingRight="50dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalBill"
        android:id="@+id/labelTotalBill"
        android:textSize="15dp"
         />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <SeekBar
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar"
        android:max="20"
        android:progress="0"
        android:indeterminate="false"
         />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editFinalText"
        android:text="@string/edit_total"
        />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction"
        android:id="@+id/textView2"
        android:onClick="boxClick"/>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boxFriendly"
        android:id="@+id/checkBox1"
        android:checked="false"
        android:onClick="boxClick"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boxSpecial"
        android:id="@+id/checkBox2"
        android:checked="false"
        android:onClick="boxClick"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boxOpinion"
        android:id="@+id/checkBox3"
        android:checked="false"
        android:onClick="boxClick"/>

    </LinearLayout>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Availibility"
        android:id="@+id/textView3"
         />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBad"
            android:id="@+id/radioBad"
            android:checked="false"
            android:onClick="boxClick" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:id="@+id/radioOk"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:onClick="boxClick"/>



        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good"
            android:id="@+id/radioGood"
            android:checked="false"
            android:onClick="boxClick"/>
    </RadioGroup>

    </LinearLayout>



<Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_centerVertical="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeWait"
        android:id="@+id/textWait"
        android:layout_gravity="center"
         />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:layout_gravity="center"
        android:textSize="40sp"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStart"
        android:id="@+id/buttonStart"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timePause"
        android:id="@+id/buttonPause"
        android:onClick="buttonClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeReset"
        android:id="@+id/buttonReset"
        android:onClick="buttonClick"/>
    </LinearLayout>

</LinearLayout>
